# youtube-dl

./: .gitignore  README.md  YTMusic_playlist_to_mp3s.py  YT_video_playlist.py  example_config.py  setup.cfg  setup.py  shared.py  update.py
main_package/: YTMusic_playlist_to_mp3s.py  YT_video_playlist.py  example_config.py  update.py
youtube-dl-scripts/: YTMusic_playlist_to_mp3s.py  YT_video_playlist.py  config.ini  shared.py
youtube_dl_scripts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
youtube_dl_wrapper/: __init__.py  config.ini  lib.py  update.py
youtube_dl_wrapper/data/: Audio_Archive.txt
youtube_downloader/: __init__.py  __main__.py  controller.py  main.ui  ui.py  update.py
