[metadata]
name = youtube_dl_scripts
version = 2.1
description = My package description
long_description = file: README.md, LICENSE
author= Aidan Prior
author_email= priorlyaidan@yahoo.com
url=https://github.com/aidanprior/youtube-dl
license = GNU GPL3
classifiers =
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
  youtube_dl