[metadata]
name = youtube_downloader
version = 3.2
description = A simple GUI app for downloading videos and mp3s from Youtube with youtube-dl
long_description = file: README.md, LICENSE
author= Aidan Prior
author_email= priorlyaidan@yahoo.com
url=https://github.com/aidanprior/youtube-dl
license = GNU GPL3
classifiers =
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
packages = youtube_downloader
install_requires =
  youtube_dl
  winshell

# [options.data_files]
# icon = youtube_downloader/icon.ico

